# comic-modernization

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODING_STANDARDS.md  IMPLEMENTATION_PLAN.md  LICENSE  MODERNIZATION_PLAN.md  Makefile  PARITY_FINDINGS_REPORT.md  README.md  README_BUILD.md  STRICT_PARITY_CHECKLIST.md  STRUCTURE.md  TITLE_SEQUENCE.md  asm_disasm_summary.txt  run-dosbox.sh  sweep_summary.csv
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
agent/: AGENT_INSTRUCTIONS.md
assets/: Makefile
assets/extraction/: Makefile
assets/extraction/programs/: find-sound  unused-tiles
assets/extraction/programs/ega/: graphic.go
assets/extraction/programs/exe/: exe.go
assets/extraction/programs/unpack-pt/: .gitignore  graphics.go  main.go
assets/extraction/programs/unpack-shp/: main.go
assets/extraction/programs/unpack-tt2/: .gitignore
deriv/: Makefile
disassembly/: .gitignore  Makefile  R3sw1989.asm  README  gen_levels.go
docs/: MODERNIZATION_PLAN.md  PARITY_FINDINGS_REPORT.md  STRICT_PARITY_CHECKLIST.md  UI_IMPLEMENTATION.md  UI_LAYOUT_UPDATE.md
include/: actors.h  audio.h  cheats.h  doors.h  file_loader.h  graphics.h  level.h  level_loader.h  level_tiles.h  physics.h  player_teleport.h  title_sequence.h  ui_system.h
programs/: Makefile  extract-sound  map-overlay.scm
programs/pack-ega/: .gitignore  main.go
programs/rawrgbx2gif/: .gitignore  README  main.go
programs/unpack-ega/: .gitignore  main.go
programs/unpack-game-graphic/: .gitignore  main.go
programs/unpack-shp/: .gitignore
programs/unpack-tt2/: main.go
reference/disassembly/: .gitignore  Makefile  README
reference/disassembly/djlink/: .gitignore  djlink  makefile
reference/levels/: base0.pt.items  base1.pt.items  base2.pt.items  castle0.pt.items  castle1.pt.items  castle2.pt.items  cave0.pt.items  cave1.pt.items  cave2.pt.items  comp0.pt.items  comp1.pt.items  comp2.pt.items  forest0.pt.items  forest1.pt.items  forest2.pt.items  lake0.pt.items  lake1.pt.items  lake2.pt.items  shed0.pt.items  shed1.pt.items  shed2.pt.items  space0.pt.items  space1.pt.items  space2.pt.items
scripts/: generate_fixtures.sh
src/: CMakeLists.txt  actors.cpp  audio.cpp  cheats.cpp  doors.cpp  file_loader.cpp  graphics.cpp  level_data.cpp  level_loader.cpp  level_tiles.cpp  main.cpp  physics.cpp  player_teleport.cpp  title_sequence.cpp  ui_system.cpp
src/assets/: AssetManager.cpp  AssetManager.h  MapLoader.cpp  MapLoader.h
src/audio/: Audio.cpp  Audio.h
src/game/: Collision.cpp  Collision.h  Constants.h  EnemyLogic.cpp  EnemyLogic.h  FireballLogic.cpp  FireballLogic.h  GameState.cpp  GameState.h
src/graphics/: Graphics.cpp  Graphics.h  UI.cpp  UI.h
src/input/: Input.cpp  Input.h
src/tests/: CMakeLists.txt  ai_fireball_tests.cpp  asm_ci_compare.cpp  collision_tests.cpp  enemy_ai_tests.cpp  enemy_player_tests.cpp  items_doors_tests.cpp  player_damage_knockback_tests.cpp  player_respawn_tests.cpp
src/tests/asm/: BUILD.md  build_asm.sh  collision_harness.asm  patch_com.py  run_asm_dosbox.sh  run_asm_unicorn.py  test_inline_parity.py  test_probe_index_regression.py
tests/: TEST_GUIDE.md  test_actors.cpp  test_audio.cpp  test_cases.h  test_graphics.cpp  test_helpers.cpp  test_helpers.h  test_main.cpp  test_physics.cpp  test_ui.cpp
tmp_logs/sweep_with_aggr/: mode0_summary.csv  mode1_summary.csv  pc_crosscheck.csv  pc_crosscheck_mode1.csv  pc_crosscheck_mode1_inline.csv  pc_crosscheck_mode1_inline_fix.csv  pc_crosscheck_mode1_inline_tramp.csv  targeted_summary.csv
tmp_logs/sweep_with_aggr/decision/: diag_mode1_inline.csv
tmp_logs/sweep_with_aggr/decision/snippets/: 48_42.txt  48_58.txt  56_42.txt  56_58.txt  64_42.txt  64_58.txt
tools/: extract_assets.py  generate_tiles  generate_tiles.cpp  requirements.txt  test_extract.py
